# py_purpose

./: .gitignore
EDA_sweetviz/: pyproject.toml  sweetviz_01.ipynb
EDA_ydata_profiling/: pyproject.toml
hugginhface/: gen_model_test_00.ipynb  gen_model_test_03.ipynb  model_pre_download.py  pyproject.toml
openai_api/: Untitled16.ipynb  make_sentence.ipynb  make_sentence_00.ipynb  make_sentence_01.ipynb  make_sentence_02.ipynb  pyproject.toml
openai_api/tmp_code/: make_sentence.ipynb  make_sentence_00 - 복사본 (2).ipynb  make_sentence_00.ipynb  make_sentence_02.ipynb
translate/: googletrans_01.ipynb  pyproject.toml
