[tool.poetry]
name = "eda"
version = "0.1.0"
description = ""
authors = ["year <sainknight87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
sweetviz = "^2.3.1"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
