[tool.poetry]
name = "openai-api"
version = "0.1.0"
description = ""
authors = ["year <sainknight87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dotenv-python = "^0.0.1"
openai = "^1.45.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
