[tool.poetry]
name = "openai-api"
version = "0.1.0"
description = ""
authors = ["year <sainknight87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
openai = "^1.46.1"
nltk = "3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
